--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": "forever --minUptime 2000 --spinSleepTime 2000 -c 'nodemon --exitcrash' server.js",
     "server": "node server.js",
+    "test": "mocha",
+    "test-watch": "mocha --watch",
     "lint": "./node_modules/.bin/eslint ./*.js ./**/*.js",
     "fix": "./node_modules/.bin/eslint --fix ./*.js ./**/*.js",
     "lint-staged": "lint-staged"
@@ -21,6 +23,19 @@
     ]
   },
   "pre-commit": "lint-staged",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gbv/wikidata-jskos"
+  },
+  "bugs": {
+    "url": "https://github.com/gbv/wikidata-jskos/issues"
+  },
+  "homepage": "https://github.com/gbv/wikidata-jskos",
+  "keywords": [
+    "wikidata",
+    "jskos",
+    "skos"
+  ],
   "author": "Jakob Voß",
   "license": "mit",
   "devDependencies": {
@@ -33,7 +48,9 @@
     "config": "^1.30.0",
     "express": "^4.16.3",
     "forever": "^0.15.3",
+    "mocha": "^5.2.0",
     "nodemon": "^1.17.5",
+    "should": "^13.2.1",
     "wikidata-sdk": "^5.11.2"
   }
 }
