--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wikidata-jskos",
   "version": "0.0.1",
-  "description": "web service to read/write JSKOS from/to Wikidata",
+  "description": "Access Wikidata in JSKOS format",
   "main": "server.js",
   "bin": {
     "wdjskos": "./bin/wdjskos"
