--- a/package.json
+++ b/package.json
@@ -44,17 +44,19 @@
   "devDependencies": {
     "eslint": "^4.19.1",
     "lint-staged": "^7.1.2",
-    "pre-commit": "^1.2.2"
+    "pre-commit": "^1.2.2",
+    "should": "^13.2.1",
+    "mocha": "^5.2.0"
   },
   "dependencies": {
     "bluereq": "^2.1.7",
+    "chalk": "^1.1.3",
     "config": "^1.30.0",
     "express": "^4.16.3",
     "forever": "^0.15.3",
     "jskos-tools": "^0.1.6",
-    "mocha": "^5.2.0",
+    "mkdirp": "^0.5.1",
     "nodemon": "^1.17.5",
-    "should": "^13.2.1",
     "simple-sha1": "^2.1.1",
     "wikidata-sdk": "^5.12.0"
   }
