--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,8 @@ language: node_js
 node_js:
   - "7"
   - "6"
+install:
+  - npm install
+script:
+  - ./bin/wdjskos schemes # also fills the cache
+  - npm test
