--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "server": "node server.js",
     "test": "mocha --timeout 5000",
     "test-watch": "mocha --watch",
-    "lint": "./node_modules/.bin/eslint ./*.js ./**/*.js",
-    "fix": "./node_modules/.bin/eslint --fix ./*.js ./**/*.js",
+    "lint": "eslint ./*.js ./**/*.js",
+    "fix": "eslint --fix ./*.js ./**/*.js",
     "lint-staged": "lint-staged"
   },
   "lint-staged": {
@@ -55,7 +55,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "forever": "^0.15.3",
-    "jskos-tools": "^0.1.6",
+    "jskos-tools": "^0.1.8",
     "mkdirp": "^0.5.1",
     "nodemon": "^1.17.5",
     "simple-sha1": "^2.1.1",
