--- a/package.json
+++ b/package.json
@@ -11,18 +11,21 @@
     "server": "node server.js",
     "test": "mocha --timeout 10000",
     "test-watch": "mocha --watch",
-    "lint": "eslint ./*.js ./**/*.js",
-    "fix": "eslint --fix ./*.js ./**/*.js",
+    "lint": "standard",
+    "fix": "standard --fix",
     "lint-staged": "lint-staged",
     "home": "./scripts/build_home"
   },
+  "standard": {
+    "env": [ "mocha" ]
+  },
   "lint-staged": {
     "**/*.js": [
-      "eslint --fix",
+      "standard --fix",
       "git add"
     ],
     "*.js": [
-      "eslint --fix",
+      "standard --fix",
       "git add"
     ]
   },
@@ -46,12 +49,12 @@
   "author": "Jakob Voß",
   "license": "MIT",
   "devDependencies": {
-    "eslint": "^4.19.1",
     "lint-staged": "^7.1.2",
     "marked": "^0.5.1",
     "mocha": "^5.2.0",
     "pre-commit": "^1.2.2",
-    "should": "^13.2.1"
+    "should": "^13.2.1",
+    "standard": "^12.0.1"
   },
   "dependencies": {
     "bluereq": "^2.1.7",
