--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "home": "./scripts/build_home"
   },
   "standard": {
-    "env": [ "mocha" ]
+    "env": [
+      "mocha"
+    ]
   },
   "lint-staged": {
     "**/*.js": [
@@ -50,7 +52,7 @@
   "license": "MIT",
   "devDependencies": {
     "lint-staged": "^7.1.2",
-    "marked": "^0.5.1",
+    "marked": "^0.6.2",
     "mocha": "^5.2.0",
     "pre-commit": "^1.2.2",
     "should": "^13.2.1",
@@ -62,7 +64,7 @@
     "debug": "^4.0.1",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
-    "forever": "^0.15.3",
+    "forever": "^1.0.0",
     "jskos-tools": "^0.2.0",
     "mkdirp": "^0.5.1",
     "nodemon": "^1.17.5",
