--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "should": "^13.2.1"
   },
   "dependencies": {
-    "bluereq": "^2.1.7",
+    "request-promise-native": "^1.0.7",
     "chalk": "^1.1.3",
     "debug": "^4.0.1",
     "dotenv": "^6.0.0",
@@ -64,6 +64,6 @@
     "mkdirp": "^0.5.1",
     "nodemon": "^1.17.5",
     "simple-sha1": "^2.1.1",
-    "wikidata-sdk": "^5.12.0"
+    "wikidata-sdk": "^7.0.0"
   }
 }
