--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wikidata-jskos",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Access Wikidata in JSKOS format",
   "main": "server.js",
   "bin": {
@@ -54,7 +54,6 @@
     "should": "^13.2.1"
   },
   "dependencies": {
-    "request-promise-native": "^1.0.7",
     "chalk": "^1.1.3",
     "debug": "^4.0.1",
     "dotenv": "^6.0.0",
@@ -63,6 +62,8 @@
     "jskos-tools": "^0.2.0",
     "mkdirp": "^0.5.1",
     "nodemon": "^1.17.5",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.7",
     "simple-sha1": "^2.1.1",
     "wikidata-sdk": "^7.0.0"
   }
