--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7",
     "simple-sha1": "^2.1.1",
-    "wikidata-edit": "^2.9.3",
+    "wikibase-edit": "^3.0.3",
     "wikidata-sdk": "^7.0.0"
   }
 }
