--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "wikidata-jskos",
   "version": "0.2.9",
+  "jskos-api": "1.0.0",
   "description": "Access Wikidata in JSKOS format",
   "main": "server.js",
   "bin": {
