--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     "*.json"
   ],
   "lint-staged": {
-    "src/**/*.{js,vue}": [
+    "src/**/*.js": [
       "eslint --fix",
       "git add"
     ],
-    "src/*.{js,vue}": [
+    "src/*.js": [
       "eslint --fix",
       "git add"
     ]
@@ -71,17 +71,17 @@
     "debug": "^4.0.1",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
-    "forever": "^1.0.0",
-    "jskos-tools": "^0.2.8",
+    "forever": "^1.0.1",
+    "jskos-tools": "^0.2.9",
     "lodash": "^4.17.15",
     "mkdirp": "^0.5.1",
-    "nodemon": "^1.17.5",
-    "passport": "^0.4.0",
+    "nodemon": "^1.19.4",
+    "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "request": "^2.88.0",
-    "request-promise-native": "^1.0.7",
+    "request": "^2.88.2",
+    "request-promise-native": "^1.0.8",
     "simple-sha1": "^2.1.1",
-    "wikibase-edit": "^3.0.3",
-    "wikidata-sdk": "^7.0.0"
+    "wikibase-edit": "^3.2.14",
+    "wikidata-sdk": "^7.2.0"
   }
 }
