--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "wdjskos": "./bin/wdjskos"
   },
   "scripts": {
-    "start": "forever --minUptime 2000 --spinSleepTime 2000 -c 'nodemon --exitcrash' server.js",
+    "start": "nodemon server.js",
     "server": "node server.js",
     "update": "./bin/wdjskos update && cp cache/mapping-schemes.ndjson assets",
     "test": "mocha --timeout 30000",
@@ -60,28 +60,27 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
-    "eslint": "^5.16.0",
-    "lint-staged": "^7.1.2",
-    "marked": "^0.7.0",
-    "mocha": "^5.2.0",
+    "eslint": "^6.8.0",
+    "lint-staged": "^10.2.6",
+    "marked": "^1.1.0",
+    "mocha": "^7.2.0",
     "pre-commit": "^1.2.2"
   },
   "dependencies": {
-    "chalk": "^1.1.3",
-    "debug": "^4.0.1",
-    "dotenv": "^6.0.0",
-    "express": "^4.16.3",
-    "forever": "^1.0.1",
-    "jskos-tools": "^0.2.9",
+    "chalk": "^4.0.0",
+    "debug": "^4.1.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "jskos-tools": "^1.0.8",
     "lodash": "^4.17.15",
-    "mkdirp": "^0.5.1",
-    "nodemon": "^1.19.4",
+    "mkdirp": "^1.0.4",
+    "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.8",
-    "simple-sha1": "^2.1.1",
-    "wikibase-edit": "^3.2.14",
-    "wikidata-sdk": "^7.2.0"
+    "simple-sha1": "^3.0.1",
+    "wikibase-edit": "^4.3.2",
+    "wikidata-sdk": "^7.4.3"
   }
 }
