--- a/package.json
+++ b/package.json
@@ -56,24 +56,24 @@
   "author": "Jakob Voß",
   "license": "MIT",
   "devDependencies": {
-    "chai": "^4.3.6",
+    "chai": "^4.3.7",
     "chai-http": "^4.3.0",
-    "eslint": "^8.14.0",
-    "lint-staged": "^12.4.1",
-    "marked": "^4.0.14",
+    "eslint": "^8.29.0",
+    "lint-staged": "^12.5.0",
+    "marked": "^4.2.4",
     "mocha": "^9.2.2",
     "pre-commit": "^1.2.2"
   },
   "dependencies": {
     "chalk": "^4.1.2",
     "debug": "^4.3.4",
-    "dotenv": "^16.0.0",
-    "express": "^4.18.0",
-    "jskos-tools": "^1.0.26",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jskos-tools": "^1.0.28",
     "lodash": "^4.17.21",
     "mkdirp": "^1.0.4",
-    "nodemon": "^2.0.15",
-    "passport": "^0.5.2",
+    "nodemon": "^2.0.20",
+    "passport": "~0.5.3",
     "passport-jwt": "^4.0.0",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.9",
