--- a/package.json
+++ b/package.json
@@ -59,21 +59,21 @@
     "chai": "^4.3.7",
     "chai-http": "^4.3.0",
     "eslint": "^8.29.0",
-    "lint-staged": "^12.5.0",
+    "lint-staged": "^13.2.3",
     "marked": "^4.2.4",
-    "mocha": "^9.2.2",
+    "mocha": "^10.2.0",
     "pre-commit": "^1.2.2"
   },
   "dependencies": {
-    "chalk": "^4.1.2",
+    "chalk": "^5.3.0",
     "debug": "^4.3.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jskos-tools": "^1.0.28",
     "lodash": "^4.17.21",
-    "mkdirp": "^1.0.4",
-    "nodemon": "^2.0.20",
-    "passport": "~0.5.3",
+    "mkdirp": "^3.0.1",
+    "nodemon": "^3.0.1",
+    "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.9",
