Adjust API with JSKOS Server
Change index from Markdown to EJS and adjust API enpoints to JSKOS API
Version 2.0.

--- a/config.default.json
+++ b/config.default.json
@@ -1,4 +1,5 @@
 {
+  "title": "Wikidata JSKOS Service",
   "wikibase": {
     "instance": "https://www.wikidata.org",
     "sparqlEndpoint": "https://query.wikidata.org/sparql",
