--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "test-watch": "mocha --watch",
     "lint": "eslint '*.js' '**/*.js'",
     "fix": "eslint --fix '*.js' '**/*.js'",
-    "lint-staged": "lint-staged"
+    "lint-staged": "lint-staged",
+    "release": "[[ \"$(git rev-parse --abbrev-ref HEAD)\" == \"dev\" ]] && git pull && npm test && npm version $SEMVER && git push && git checkout main && git merge dev && git push --follow-tags && git checkout dev",
+    "release:patch": "SEMVER=patch npm run release",
+    "release:minor": "SEMVER=minor npm run release",
+    "release:major": "SEMVER=major npm run release"
   },
   "files": [
     "lib/*",
