--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "chai": "^4.4.1",
     "chai-http": "^4.4.0",
     "eslint": "^8.56.0",
+    "eslint-config-gbv": "^1.1.0",
     "lint-staged": "^15.2.0",
     "mocha": "^10.2.0",
     "pre-commit": "^1.2.2"
