--- a/package.json
+++ b/package.json
@@ -63,30 +63,27 @@
   "license": "MIT",
   "devDependencies": {
     "chai": "^5.1.1",
-    "chai-http": "^4.4.0",
-    "eslint": "^8.56.0",
+    "chai-http": "^5.0.0",
+    "eslint": "^8.57.0",
     "eslint-config-gbv": "^1.1.0",
-    "lint-staged": "^15.2.0",
-    "mocha": "^10.2.0",
+    "lint-staged": "^15.2.10",
+    "mocha": "^10.7.3",
     "pre-commit": "^1.2.2"
   },
   "dependencies": {
     "chalk": "^5.3.0",
-    "debug": "^4.3.4",
-    "dotenv": "^16.3.2",
-    "ejs": "^3.1.9",
-    "express": "^4.18.2",
+    "debug": "^4.3.7",
+    "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
+    "express": "^4.19.2",
     "jskos-tools": "^1.0.40",
     "lodash": "^4.17.21",
     "mkdirp": "^3.0.1",
-    "nodemon": "^3.0.3",
+    "nodemon": "^3.1.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "request": "^2.88.2",
-    "request-promise-native": "^1.0.9",
     "simple-sha1": "^3.1.0",
     "wikibase-edit": "^7.1.0",
-    "wikibase-sdk": "^9.2.5",
-    "wikidata-sdk": "^8.1.1"
+    "wikibase-sdk": "^10.1.0"
   }
 }
