--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,17 +5,13 @@ on: [push, pull_request]
 
 jobs:
   test:
-
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
-        node-version: [ 18.x, 20.x ]
-
+        node-version: [ 18.x, 20.x, 22.x ]
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
