--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "release": "test $(git rev-parse --abbrev-ref HEAD) = dev && git pull && npm test && npm version $SEMVER && npm run --silent yesno && (git push && git checkout main && git merge dev && git push --follow-tags && git checkout dev) || (git tag -d $(git describe --tags) && git reset --hard HEAD~1)",
     "release:patch": "SEMVER=patch npm run release",
     "release:minor": "SEMVER=minor npm run release",
-    "release:major": "SEMVER=major npm run release"
+    "release:major": "SEMVER=major npm run release",
+    "prepare": "husky || true"
   },
   "files": [
     "lib/*",
@@ -44,9 +45,6 @@
       "eslint --fix"
     ]
   },
-  "pre-commit": [
-    "lint-staged"
-  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/gbv/wikidata-jskos"
@@ -67,9 +65,9 @@
     "chai-http": "^5.1.1",
     "eslint": "~9.16",
     "eslint-config-gbv": "~2.6",
+    "husky": "^9.1.7",
     "lint-staged": "^15.2.11",
     "mocha": "^11.0.1",
-    "pre-commit": "^1.2.2",
     "yesno": "^0.4.0"
   },
   "dependencies": {
