--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "node": ">=18"
   },
   "bin": {
-    "wdjskos": "./bin/wdjskos"
+    "wdjskos": "bin/wdjskos"
   },
   "scripts": {
     "start": "nodemon server.js",
@@ -47,7 +47,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gbv/wikidata-jskos"
+    "url": "git+https://github.com/gbv/wikidata-jskos.git"
   },
   "bugs": {
     "url": "https://github.com/gbv/wikidata-jskos/issues"
